stuf/src/p5/tests/t094.err
Semantic error on line 1: Variable 'r' was not declared before it was used.
