stuf/src/p5/tests/t094.gpl
rectangle r(x=r.x);
on akey
{
  r.x+=r.x;
}
